--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,50 +1,33 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="fragment" content="!"/>
-	<title>My AngularJS App</title>
-	<link rel="stylesheet" href="css/app.css"/>
+    <meta charset="utf-8">
+    <title>Babson Global Consortium Profile</title>
+
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="css/jquery.fileupload-ui.css">
 </head>
 <body>
-<ul class="menu">
-	<li><a href="#/view1">view1</a></li>
-	<li><a href="#/view2">view2</a></li>
-</ul>
-
-<div ng-controller="LoginCtrl">
-	<p ng-show="authenticated">
-		Welcome {{username}}
-		<button ng-click="signout()">Sign out</button>
-	</p>
-	<p ng-hide="authenticated">
-		<button ng-click="signin()">Sign in</button>
-	</p>
-
-	<form name="login" ng-show="form.visible" ng-submit="submit()">
-		<p>
-			<label for="username">Username:</label>
-			<input id="username" type="text" ng-model="username" required/>
-		</p>
-		<p>
-			<label for="password">Password:</label>
-			<input id="password" type="password" ng-model="password" required/>
-		</p>
-		<p><input type="submit" value="Submit"/></p>
-	</form>
+<div ng-app="bgc-profile">
+    <div ng-view></div>
 </div>
 
-
-<div class="ng-view"></div>
-
-<div>Angular seed app: v<span app-version></span></div>
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="lib/angular/angular.js"></script>
 <script src="js/app.js"></script>
-<script src="js/services.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/filters.js"></script>
-<script src="js/directives.js"></script>
+<script src="lib/profile/controllers.js"></script>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+
+<script type="text/javascript" src="js/plupload/plupload.js"></script>
+<script type="text/javascript" src="js/plupload/plupload.gears.js"></script>
+<script type="text/javascript" src="js/plupload/plupload.silverlight.js"></script>
+<script type="text/javascript" src="js/plupload/plupload.flash.js"></script>
+<script type="text/javascript" src="js/plupload/plupload.browserplus.js"></script>
+<script type="text/javascript" src="js/plupload/plupload.html4.js"></script>
+<script type="text/javascript" src="js/plupload/plupload.html5.js"></script>
+
+<script type="text/javascript" src="js/bootstrap-alert.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
